# cython-setuptools

./: .flake8  .gitignore  .travis.yml  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: cicd_test.yml
cython_setuptools/: __init__.py  _version.py  cli.py  vendor.py
tests/: conftest.py  test_integration.py  test_vendor.py
tests/pypkg/: bar.py  cysetuptools.py  foo.pyx  setup-cythonize.py  setup-no-cythonize.py  setup.cfg
tests/src/: foo.c
