[build-system]
requires = [
    "setuptools==67.2.0",
    "wheel",
    "setuptools_scm>=6.4", # for automated versioning
    ]
build-backend = "setuptools.build_meta"

[project]
name = "cython_setuptools"
description = "Cython setuptools integration"
dynamic = ["version"]
readme = "README.rst"
requires-python = "~=3.7"
keywords = ["cython", "setuptools"]
authors = [{name = "Luper Rouch", email= "luper.rouch@gmail.com"}]
maintainers = [{ name = "Marco Treglia", email = "mtreglia@gopro.com" }]
dependencies = []
classifiers = [
    "Framework :: Setuptools Plugin",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
dev = [
    "tox",
    "flake8",
    "pytest",
    "virtualenv",
    "pytest-virtualenv",
    "six"]

[metadata]
long_description = "file:README.md"
long_description_content_type = "text/markdown"

[tool.setuptools_scm]
write_to = "cython_setuptools/_version.py"

[option]
packages = "find:"
include_package_data = "true"
zip_safe = "false"

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 140