[metadata]
name = cython-setuptools
version = attr: cython_setuptools.__version__
description = Cython setuptools integration
keywords = cython setuptools
author = Luper Rouch
author_email = luper.rouch@gmail.com
url = https://github.com/flupke/cython-setuptools
license = MIT
classifiers =
    Framework :: Setuptools Plugin
    Topic :: Software Development :: Build Tools

[options]
packages = find:
install_requires = click

[options.packages.find]
exclude = *.tests *.tests.* tests.* tests

[options.extras_require]
dev =
    pytest<4.0.0
    pytest-virtualenv
    six

[options.entry_points]
console_scripts =
    cython-setuptools = cython_setuptools.cli:main
