[metadata]
name = cython-setuptools
version = attr: cython_setuptools.__version__
description = Cython setuptools integration
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cython setuptools
author = Luper Rouch
author_email = luper.rouch@gmail.com
url = https://github.com/flupke/cython-setuptools
classifiers =
    Framework :: Setuptools Plugin
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires = click

[options.packages.find]
exclude = *.tests *.tests.* tests.* tests

[options.extras_require]
dev =
    pytest<4.0.0
    virtualenv
    pytest-virtualenv
    six

[options.entry_points]
console_scripts =
    cython-setuptools = cython_setuptools.cli:main
